fixed width issues on iphone 5 screen, cleaned up css

--- a/src/app/modules/contact/contact.component.scss
+++ b/src/app/modules/contact/contact.component.scss
@@ -1,5 +1,5 @@
 @import "../../../styles.scss";
 .page-container {
   background-color: white;
-  padding-top: 20px;
+  // padding-top: 20px;
 }
